[package]
name = "libucl-bind"
version = "0.2.0"
description = "Low-level bindings to libucl."
authors = ["Łukasz Niemier <lukasz@niemier.pl>", "Igor Laćarac <draftsix@gmail.com>"]
build = "build.rs"
license-file = "LICENSE"
repository = "https://github.com/draft6/libucl-rs/libucl-bind"
exclude = ["libucl/lua/libucl.rockspec"]

[dependencies]
libc = "0.2.66"
bitflags = "1.2"