[package]
name = "libucl"
version = "0.2.2"
description = "Rust wrapper with bindings to libucl"
authors = ["Łukasz Niemier <lukasz@niemier.pl>", "Igor Laćarac <draftsix@gmail.com>"]
license = "MIT"
repository = "https://github.com/draft6/libucl-rs"
readme = "README.md"

[dependencies]
libc = "0.2.66"
bitflags = "1.2"
clap = "2.33.0"

[dev-dependencies]
regex = "1"

[dependencies.libucl-bind]
path = "../libucl-bind"
version = "0.2.1"
